deleted unnecessary images and uploaded the final images of foods

--- a/SWD607_Assignment2/SWD607_Assignment2.csproj
+++ b/SWD607_Assignment2/SWD607_Assignment2.csproj
@@ -11,17 +11,35 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Resources\drawable\Back_Button_Image.JPG" />
-    <None Remove="Resources\drawable\buffet.jpg" />
     <None Remove="Resources\drawable\Cart_Button_Image.JPG" />
     <None Remove="Resources\drawable\Close_Button_Image.JPG" />
     <None Remove="Resources\drawable\Contact_Button_Image.JPG" />
-    <None Remove="Resources\drawable\Food_Feature_1.jpg" />
-    <None Remove="Resources\drawable\Food_Feature_2.jpg" />
+    <None Remove="Resources\drawable\hokey_pokey1.jpg" />
+    <None Remove="Resources\drawable\hokey_pokey2.jpg" />
+    <None Remove="Resources\drawable\hokey_pokey3.jpg" />
+    <None Remove="Resources\drawable\hokey_pokey4.jpg" />
     <None Remove="Resources\drawable\Home_Button_Image.JPG" />
     <None Remove="Resources\drawable\Image_Round_Corner.xml" />
+    <None Remove="Resources\drawable\main_menu_head.png" />
     <None Remove="Resources\drawable\Next_Button_Image.JPG" />
+    <None Remove="Resources\drawable\onion_dip1.jpg" />
+    <None Remove="Resources\drawable\onion_dip2.jpg" />
+    <None Remove="Resources\drawable\onion_dip3.jpg" />
+    <None Remove="Resources\drawable\onion_dip4.jpg" />
+    <None Remove="Resources\drawable\pavlova1.jpg" />
+    <None Remove="Resources\drawable\pavlova2.jpg" />
+    <None Remove="Resources\drawable\pavlova3.jpg" />
+    <None Remove="Resources\drawable\pavlova4.jpg" />
     <None Remove="Resources\drawable\Profile_Button_Image.JPG" />
     <None Remove="Resources\drawable\Search_Button_Image.JPG" />
+    <None Remove="Resources\drawable\southland_cheese1.jpg" />
+    <None Remove="Resources\drawable\southland_cheese2.jpg" />
+    <None Remove="Resources\drawable\southland_cheese3.jpg" />
+    <None Remove="Resources\drawable\southland_cheese4.jpg" />
+    <None Remove="Resources\drawable\whitebait_fritters1.jpg" />
+    <None Remove="Resources\drawable\whitebait_fritters2.jpg" />
+    <None Remove="Resources\drawable\whitebait_fritters3.jpg" />
+    <None Remove="Resources\drawable\whitebait_fritters4.jpg" />
     <None Remove="Resources\drawable\white_button_border_gray.xml" />
     <None Remove="Resources\drawable\white_button_no_border.xml" />
     <None Remove="Resources\layout\AddEdit.xml" />
