--- a/SWD607_Assignment2/SWD607_Assignment2.csproj
+++ b/SWD607_Assignment2/SWD607_Assignment2.csproj
@@ -18,14 +18,20 @@
     <None Remove="Resources\drawable\hokey_pokey2.jpg" />
     <None Remove="Resources\drawable\hokey_pokey3.jpg" />
     <None Remove="Resources\drawable\hokey_pokey4.jpg" />
+    <None Remove="Resources\drawable\Hokey_Pokey_Ingredients.png" />
+    <None Remove="Resources\drawable\Hokey_Pokey_Recipe.png" />
     <None Remove="Resources\drawable\Home_Button_Image.JPG" />
     <None Remove="Resources\drawable\Image_Round_Corner.xml" />
+    <None Remove="Resources\drawable\Kiwi_Pavlova_Ingredients.png" />
+    <None Remove="Resources\drawable\Kiwi_Pavlova_Recipe.png" />
     <None Remove="Resources\drawable\main_menu_head.png" />
     <None Remove="Resources\drawable\Next_Button_Image.JPG" />
     <None Remove="Resources\drawable\onion_dip1.jpg" />
     <None Remove="Resources\drawable\onion_dip2.jpg" />
     <None Remove="Resources\drawable\onion_dip3.jpg" />
     <None Remove="Resources\drawable\onion_dip4.jpg" />
+    <None Remove="Resources\drawable\Onion_Dip_Ingredients.png" />
+    <None Remove="Resources\drawable\Onion_Dip_Recipe.png" />
     <None Remove="Resources\drawable\pavlova1.jpg" />
     <None Remove="Resources\drawable\pavlova2.jpg" />
     <None Remove="Resources\drawable\pavlova3.jpg" />
@@ -36,10 +42,14 @@
     <None Remove="Resources\drawable\southland_cheese2.jpg" />
     <None Remove="Resources\drawable\southland_cheese3.jpg" />
     <None Remove="Resources\drawable\southland_cheese4.jpg" />
+    <None Remove="Resources\drawable\Southland_Cheese_Rolls_Ingredients.png" />
+    <None Remove="Resources\drawable\Southland_Cheese_Rolls_Recipe.png" />
     <None Remove="Resources\drawable\whitebait_fritters1.jpg" />
     <None Remove="Resources\drawable\whitebait_fritters2.jpg" />
     <None Remove="Resources\drawable\whitebait_fritters3.jpg" />
     <None Remove="Resources\drawable\whitebait_fritters4.jpg" />
+    <None Remove="Resources\drawable\Whitebait_Fritters_Ingredients.png" />
+    <None Remove="Resources\drawable\Whitebait_Fritters_Recipe.png" />
     <None Remove="Resources\drawable\white_button_border_gray.xml" />
     <None Remove="Resources\drawable\white_button_no_border.xml" />
     <None Remove="Resources\layout\AddEdit.xml" />
