--- a/SWD607_Assignment2/SWD607_Assignment2.csproj
+++ b/SWD607_Assignment2/SWD607_Assignment2.csproj
@@ -10,6 +10,7 @@
     <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Resources\drawable\admin_logo.jpg" />
     <None Remove="Resources\drawable\Back_Button_Image.JPG" />
     <None Remove="Resources\drawable\cards.jpg" />
     <None Remove="Resources\drawable\Cart_Button_Image.JPG" />
