--- a/SWD607_Assignment2/SWD607_Assignment2.csproj
+++ b/SWD607_Assignment2/SWD607_Assignment2.csproj
@@ -73,6 +73,7 @@
     <None Remove="Resources\layout\OrderDetail.xml" />
     <None Remove="Resources\layout\PaymentOption.xml" />
     <None Remove="Resources\layout\Profile.xml" />
+    <None Remove="Resources\layout\Profile_Update.xml" />
     <None Remove="Resources\layout\Reservation.xml" />
     <None Remove="Resources\layout\Search.xml" />
     <None Remove="Resources\layout\SignIn.xml" />
